<?xml version="1.0"?>
<package>
  <name>omni_control</name>
  <version>0.0.1</version>
  <description>
    The omni_control package. This is in experimental mode.
  </description>
  
  <maintainer email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</maintainer>
  <license>GPLv3</license>
  <url>https://github.com/RafBerkvens/ua_ros_p3dx</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
