<?xml version="1.0"?>
<package>
  <name>omni_gazebo</name>
  <version>0.1.0</version>
  <description>
    The omni_gazebo package. This is a first working version.
  </description>
  
  <maintainer email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</maintainer>
  <license>GPLv3</license>
  <url>https://github.com/RafBerkvens/ua_ros_p3dx</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>omni_control</build_depend>
  <build_depend>omni_description</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>omni_control</run_depend>
  <run_depend>omni_description</run_depend>
</package>
